11 April 2007
+ Added filecabinet_pins table to install
+ Reduced all permissions to just folders
+ Added ability to pin folders to pages.
+ Added extra security checks
+ Users must now have File Cabinet permissions to use image manager
+ Added the clip image ability.
+ Added ability to limit files listed in pinned folders.
+ Unpin not finished.
+ Folder listing now show public/private status
+ Updated files: in templates/
                 file_list.tpl, folder_list.tpl, image_grid.tpl,
                 javascript.tpl, pin_folder.tpl, pinned.tpl,
                 plain.tpl, settings.tpl, style.css


4 April 2007
+ Added German files (which will need updating)
+ Updated to new language format.

2 April 2007
+ Completely rewrote file cabinet.
+ Folders used as file containers
+ Image manager crops and resizes images to fit specifications.

+ Updated files : conf/config.php, conf/error.php, conf/icons.php,
                  img/icons/audio.png, img/icons/document.png,
                  img/icons/flash_icon.png, img/icons/spreadsheet.png,
                  img/icons/tar.png
                  javascript/pick_image/head.js,
                  javascript/pick_image/scripts.js
                  templates/document_edit.tpl
                  templates/image_edit.tpl
                  templates/settings.tpl
                  templates/style.css
                  templates/view.tpl
                  

+ New files :     img/folder.png, img/folder.svg,
                  javascript/folder_contents/head.js
                  javascript/refresh_manager/head.js
                  templates/edit_folder.tpl
                  templates/file_list.tpl
                  templates/folder_list.tpl
                  templates/image_folders.tpl
                  templates/image_grid.tpl
                  templates/image.xml
                  templates/javascript.tpl
                  templates/plain.tpl
            
+ Deleted files   class/Cabinet_Action.php,